--- a/PP_2_1_4_spring-types-of-wiring/PP_2_1_4_spring-types-of-wiring/pom.xml
+++ b/PP_2_1_4_spring-types-of-wiring/PP_2_1_4_spring-types-of-wiring/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>ru.javamentor</groupId>
-    <artifactId>spring-beans</artifactId>
+    <artifactId>spring-types-of-wiring</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -38,6 +38,11 @@
             <artifactId>junit-4-12_2.13</artifactId>
             <version>3.2.2.0</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-beans</artifactId>
+            <version>5.3.14</version>
         </dependency>
     </dependencies>
 
